--- a/02-JS-CSS-Clock/src/index.html
+++ b/02-JS-CSS-Clock/src/index.html
@@ -60,9 +60,36 @@
         top: 50%;
         transform-origin: 100%;
         transform: rotate(90deg);
+        transition: all 0.05s;
+        transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
       }
     </style>
 
-    <script></script>
+    <script>
+      const secondHand = document.querySelector(".second-hand");
+      const minHand = document.querySelector(".min-hand");
+      const hourHand = document.querySelector(".hour-hand");
+
+      function setDate() {
+        const now = new Date();
+
+        const seconds = now.getSeconds();
+        const secondsDegrees = ((seconds / 60) * 360) + 90;
+        
+        const minutes = now.getMinutes();
+        const minutesDegrees = ((minutes / 60) * 360) + 90;
+        
+        const hours = now.getHours();
+        const hoursDegrees = ((hours / 60) * 360) + 90;
+
+        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+        minHand.style.transform = `rotate(${minutesDegrees}deg)`;
+        hourHand.style.transform = `rotate(${hoursDegrees}deg`;
+
+        console.log(seconds);
+      }
+
+      setInterval(setDate, 1000);
+    </script>
   </body>
 </html>
