--- a/index.html
+++ b/index.html
@@ -67,29 +67,31 @@
 
     <script>
       const secondHand = document.querySelector(".second-hand");
-      const minHand = document.querySelector(".min-hand");
+      const minsHand = document.querySelector(".min-hand");
       const hourHand = document.querySelector(".hour-hand");
 
       function setDate() {
         const now = new Date();
 
         const seconds = now.getSeconds();
-        const secondsDegrees = ((seconds / 60) * 360) + 90;
-        
-        const minutes = now.getMinutes();
-        const minutesDegrees = ((minutes / 60) * 360) + 90;
-        
-        const hours = now.getHours();
-        const hoursDegrees = ((hours / 60) * 360) + 90;
-
+        const secondsDegrees = (seconds / 60) * 360 + 90;
         secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-        minHand.style.transform = `rotate(${minutesDegrees}deg)`;
-        hourHand.style.transform = `rotate(${hoursDegrees}deg`;
+
+        const mins = now.getMinutes();
+        const minsDegrees = ((mins / 60) * 360) + 90;
+        minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+        const hour = now.getHours();
+        const hourDegrees = ((hour / 12) * 360) + 90;
+        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
 
         console.log(seconds);
+        console.log(mins);
+        console.log(hour);
       }
 
       setInterval(setDate, 1000);
+      setDate();
     </script>
   </body>
 </html>
