--- a/index.html
+++ b/index.html
@@ -1,97 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>JS + CSS Clock</title>
-  </head>
-  <body>
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <title>Scoped CSS Variables and JS</title>
+</head>
+<body>
+  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
-    <style>
-      html {
-        background: #018ded url(http://unsplash.it/1500/1000?image=881&blur=5);
-        background-size: cover;
-        font-family: "helvetica neue";
-        text-align: center;
-        font-size: 10px;
-      }
+  <div class="controls">
+    <label for="spacing">Spacing:</label>
+    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
-      body {
-        margin: 0;
-        font-size: 2rem;
-        display: flex;
-        flex: 1;
-        min-height: 100vh;
-        align-items: center;
-      }
+    <label for="blur">Blur:</label>
+    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
-      .clock {
-        width: 30rem;
-        height: 30rem;
-        border: 20px solid white;
-        border-radius: 50%;
-        margin: 50px auto;
-        position: relative;
-        padding: 2rem;
-        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
-          inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
-      }
+    <label for="base">Base Color</label>
+    <input id="base" type="color" name="base" value="#ffc600">
+  </div>
 
-      .clock-face {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        transform: translateY(
-          -3px
-        ); /* account for the height of the clock hands */
-      }
+  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
-      .hand {
-        width: 50%;
-        height: 6px;
-        background: black;
-        position: absolute;
-        top: 50%;
-        transform-origin: 100%;
-        transform: rotate(90deg);
-        transition: all 0.05s;
-        transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-      }
-    </style>
+  <style>
+    /*
+      misc styles, nothing to do with CSS variables
+    */
+    body {
+      text-align: center;
+      background: #193549;
+      color: white;
+      font-family: 'helvetica neue', sans-serif;
+      font-weight: 100;
+      font-size: 50px;
+    }
+    .controls {
+      margin-bottom: 50px;
+    }
+    input {
+      width: 100px;
+    }
+  </style>
 
-    <script>
-      const secondHand = document.querySelector(".second-hand");
-      const minsHand = document.querySelector(".min-hand");
-      const hourHand = document.querySelector(".hour-hand");
+  <script>
+  </script>
 
-      function setDate() {
-        const now = new Date();
-
-        const seconds = now.getSeconds();
-        const secondsDegrees = (seconds / 60) * 360 + 90;
-        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-
-        const mins = now.getMinutes();
-        const minsDegrees = ((mins / 60) * 360) + 90;
-        minsHand.style.transform = `rotate(${minsDegrees}deg)`;
-
-        const hour = now.getHours();
-        const hourDegrees = ((hour / 12) * 360) + 90;
-        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
-
-        console.log(seconds);
-        console.log(mins);
-        console.log(hour);
-      }
-
-      setInterval(setDate, 1000);
-      setDate();
-    </script>
-  </body>
+</body>
 </html>
