--- a/03-CSS-Variables/index.html
+++ b/03-CSS-Variables/index.html
@@ -54,8 +54,9 @@
       }
 
       /*
-      misc styles, nothing to do with CSS variables
-    */
+        misc styles, nothing to do with CSS variables
+      */
+
       body {
         text-align: center;
         background: #193549;
@@ -64,25 +65,31 @@
         font-weight: 100;
         font-size: 50px;
       }
+
       .controls {
         margin-bottom: 50px;
       }
+
       input {
         width: 100px;
       }
     </style>
 
     <script>
-      const inputs = document.querySelectorAll('.controls input');
+      const inputs = document.querySelectorAll(".controls input");
 
-      function handleUpdate(){
-        const suffix = this.dataset.sizing || '';
-        document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+      function handleUpdate() {
+        const suffix = this.dataset.sizing || "";
+        document.documentElement.style.setProperty(
+          `--${this.name}`,
+          this.value + suffix
+        );
       }
 
-      inputs.forEach(input => input.addEventListener('change', handleUpdate));
-      inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
-
+      inputs.forEach(input => input.addEventListener("change", handleUpdate));
+      inputs.forEach(input =>
+        input.addEventListener("mousemove", handleUpdate)
+      );
     </script>
   </body>
 </html>
