--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       .panels {
         min-height: 100vh;
         overflow: hidden;
+        display: flex;
       }
 
       .panel {
@@ -47,6 +48,11 @@
         font-size: 20px;
         background-size: cover;
         background-position: center;
+        flex: 1;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
       }
 
       .panel1 {
@@ -65,13 +71,29 @@
         background-image: url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500);
       }
 
-      /* Flex Children */
+      /* Flex Items */
       .panel > * {
         margin: 0;
         width: 100%;
         transition: transform 0.5s;
+        flex: 1 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 
+      .panel > *:first-child {
+        transform: translateY(-100%);
+      }
+      .panel.open-active > *:first-child {
+        transform: translateY(0);
+      }
+      .panel > *:last-child {
+        transform: translateY(100%);
+      }
+      .panel.open-active > *:last-child {
+        transform: translateY(0);
+      }
       .panel p {
         text-transform: uppercase;
         font-family: "Amatic SC", cursive;
@@ -84,6 +106,7 @@
       }
 
       .panel.open {
+        flex: 5;
         font-size: 40px;
       }
     </style>
