--- a/index.html
+++ b/index.html
@@ -2,53 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>HTML5 Canvas</title>
+    <title>Console Tricks!</title>
   </head>
   <body>
-    <canvas id="draw" width="800" height="800"></canvas>
+    <p onClick="makeGreen()">×BREAK×DOWN×</p>
+
     <script>
-      const canvas = document.querySelector("#draw");
-      const ctx = canvas.getContext("2d");
+      const dogs = [{ name: "Snickers", age: 2 }, { name: "hugo", age: 8 }];
 
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-
-      ctx.strokeStyle = "#BADA55";
-      ctx.lineJoin = "round";
-      ctx.lineCap = "round";
-
-      let isDrawing = false;
-      let lastX = 0;
-      let lastY = 0;
-
-      function draw(e) {
-        if (!isDrawing) return; // Stops the function from running when they are not moused down
-        console.log(e);
-        ctx.beginPath();
-        // Start From
-        ctx.moveTo(lastX, lastY);
-        // Go To
-        ctx.lineTo(e.offsetX, e.offsetY);
-        ctx.stroke();
-
-        // Destructing an array -> ES6 Concept
-        [lastX, lastY] = [e.offsetX, e.offsetY];
+      function makeGreen() {
+        const p = document.querySelector("p");
+        p.style.color = "#BADA55";
+        p.style.fontSize = "50px";
       }
 
-      canvas.addEventListener("mousedown", e => {
-        isDrawing = true;
-        [lastX, lastY] = [e.offsetX, e.offsetY];
+      // Regular
+      console.log("hello");
+
+      // Interpolated
+      console.log("I am a %s string", "interpolated");
+
+      // Styled
+      console.log(
+        "%c I am some style text",
+        "font-size:50px; background-color: red; text-shadow: 4px 4px blue"
+      );
+
+      // warning!
+      console.warn("Warning Displayed");
+
+      // Error :|
+      console.error("Error!");
+
+      // Info
+      console.info("It's for stating an Information");
+
+      // Testing
+      const p = document.querySelector("p");
+      console.assert(p.classList.contains("ouch"), "That is wrong!");
+
+      // clearing
+      // console.clear();
+
+      // Viewing DOM Elements
+      console.log(p);
+      console.dir(p);
+
+      console.clear();
+
+      // Grouping together
+      dogs.forEach(dog => {
+        console.groupCollapsed(`${dog.name}`);
+        console.log(`This is ${dog.name}`);
+        console.log(`${dog.name} is ${dog.age} years old`);
+        console.groupEnd(`${dog.name}`);
       });
-      canvas.addEventListener("mousemove", draw);
-      canvas.addEventListener("mouseup", () => (isDrawing = false));
-      canvas.addEventListener("mouseout", () => (isDrawing = false));
-    </script>
 
-    <style>
-      html,
-      body {
-        margin: 0;
-      }
-    </style>
+      // counting
+
+      // timing
+    </script>
   </body>
 </html>
