--- a/index.html
+++ b/index.html
@@ -2,108 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Hold Shift to Check Multiple Checkboxes</title>
+    <title>HTML Video Player</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <style>
-      html {
-        font-family: sans-serif;
-        background: #ffc600;
-      }
+    <div class="player">
+      <video
+        class="player__video viewer"
+        src="https://github.com/wesbos/JavaScript30/blob/master/11%20-%20Custom%20Video%20Player/652333414.mp4"
+      ></video>
 
-      .inbox {
-        max-width: 400px;
-        margin: 50px auto;
-        background: white;
-        border-radius: 5px;
-        box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.1);
-      }
-
-      .item {
-        display: flex;
-        align-items: center;
-        border-bottom: 1px solid #f1f1f1;
-      }
-
-      .item:last-child {
-        border-bottom: 0;
-      }
-
-      input:checked + p {
-        background: #f9f9f9;
-        text-decoration: line-through;
-      }
-
-      input[type="checkbox"] {
-        margin: 20px;
-      }
-
-      p {
-        margin: 0;
-        padding: 20px;
-        transition: background 0.2s;
-        flex: 1;
-        font-family: "helvetica neue";
-        font-size: 20px;
-        font-weight: 200;
-        border-left: 1px solid #d1e2ff;
-      }
-    </style>
-    <!--
-   The following is a common layout you would see in an email client.
-   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
-  -->
-    <div class="inbox">
-      <div class="item">
-        <input type="checkbox" />
-        <p>This is an inbox layout.</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Check one item</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Hold down your Shift key</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Check a lower item</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Everything in between should also be set to checked</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Try to do it without any libraries</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Just regular JavaScript</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Good Luck!</p>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <p>Don't forget to tweet your result!</p>
+      <div class="player__controls">
+        <div class="progress">
+          <div class="progress__filled"></div>
+        </div>
+        <button class="player__button toggle" title="Toggle Play">►</button>
+        <input
+          type="range"
+          name="volume"
+          class="player__slider"
+          min="0"
+          max="1"
+          step="0.05"
+          value="1"
+        />
+        <input
+          type="range"
+          name="playbackRate"
+          class="player__slider"
+          min="0.5"
+          max="2"
+          step="0.1"
+          value="1"
+        />
+        <button data-skip="-10" class="player__button">« 10s</button>
+        <button data-skip="25" class="player__button">25s »</button>
       </div>
     </div>
 
-    <script>
-      const play = document.querySelectorAll(".item");
-
-      let isChecked = false;
-
-      function check(e) {
-        console.log(e);
-      }
-
-      play.addEventListener("mouseclick", e => {
-        isChecked = true;
-      });
-    </script>
+    <script src="scripts.js"></script>
   </body>
 </html>
