:construction: Work in Progress

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="player">
       <video
         class="player__video viewer"
-        src="https://github.com/wesbos/JavaScript30/blob/master/11%20-%20Custom%20Video%20Player/652333414.mp4"
+        src="https://storage.coverr.co/videos/coverr-campervan-drives-through-norway-hills-1575818407395?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTc5ODQ1NDY0fQ.SbRu01FHL45aEODUzRLKBjx9NgL63Eo-_Mq2xij2K4E"
       ></video>
 
       <div class="player__controls">
