:alarm_clock: Adding Time

--- a/18-Adding-Up-Times-with-Reduce/index.html
+++ b/18-Adding-Up-Times-with-Reduce/index.html
@@ -183,8 +183,24 @@
     </ul>
     <script>
       const timeNodes = Array.from(document.querySelectorAll("[data-time]"));
-      const seconds = timeNodes.map(node => node.dataset.time);
-      console.log(timeNodes);
+      const seconds = timeNodes
+        .map(node => node.dataset.time)
+        .map(timeCode => {
+          // Destructuring
+          const [mins, secs] = timeCode.split(":").map(parseFloat);
+          return mins * 60 + secs;
+        })
+        .reduce((total, vidSeconds) => {
+          return total + vidSeconds;
+        }, 0);
+
+      let secondsLeft = seconds;
+      const hours = Math.floor(secondsLeft / 3600);
+      secondsLeft = secondsLeft % 3600;
+      const mins = Math.floor(secondsLeft / 60);
+      secondsLeft = secondsLeft % 60;
+
+      console.log(hours, mins, secondsLeft);
     </script>
   </body>
 </html>
