:recycle: Stripe NavBar

--- a/26-Stripe-Follow-Along-Nav/index.html
+++ b/26-Stripe-Follow-Along-Nav/index.html
@@ -269,12 +269,35 @@
         this.classList.add("trigger-enter");
         setTimeout(() => {
           //value of this is inherited from the parent function when arrow function is used
-          this.classList.add("trigger-enter-active");
+          // When Console log this it will give you window object when using function keyword
+          if (this.classList.contains("trigger-enter"))
+            this.classList.add("trigger-enter-active");
         }, 150);
+        background.classList.add("open");
+
+        const dropdown = this.querySelector(".dropdown");
+        const dropdownCoords = dropdown.getBoundingClientRect();
+        const navCoords = nav.getBoundingClientRect();
+
+        const coords = {
+          width: dropdownCoords.width,
+          height: dropdownCoords.height,
+          top: dropdownCoords.top - navCoords.top,
+          left: dropdownCoords.left - navCoords.left
+        };
+
+        background.style.setProperty("width", `${coords.width}px`);
+        background.style.setProperty("height", `${coords.height}px`);
+        background.style.setProperty(
+          "transform",
+          `translate(${coords.left}px, ${coords.top}px)`
+        );
       }
 
       function handleLeave() {
-        console.log("Leave!!");
+        this.classList.remove("trigger-enter");
+        setTimeout(() => this.classList.remove("trigger-enter-active"), 150);
+        background.classList.remove("open");
       }
 
       triggers.forEach(trigger =>
