:construction: Work in Progress

--- a/06-Type-Ahead/index.html
+++ b/06-Type-Ahead/index.html
@@ -17,10 +17,18 @@
       const endpoint =
         "https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json";
 
-      const cities = [];
+      let cities = [];
       fetch(endpoint)
         .then(blob => blob.json())
-        .then(data => console.log(data));
+        .then(data => cities.push(...data));
+
+      function findMatches(wordToMatch, cities) {
+        return cities.filter(place => {
+          // Figure out if city or state matches what was searched
+          const regex = new RegExp(wordToMatch, "gi");
+          return place.city.match(regex) || place.state.match(regex);
+        });
+      }
     </script>
   </body>
 </html>
