--- a/15-Local-Storage/index.html
+++ b/15-Local-Storage/index.html
@@ -50,14 +50,13 @@
       <form class="add-items">
         <input type="text" name="item" placeholder="Item Name" required />
         <input type="submit" value="+ Add Item" />
-        <input type="submit" value="- Delete Item" />
       </form>
     </div>
 
     <script>
       const addItems = document.querySelector(".add-items");
       const itemsList = document.querySelector(".plates");
-      const items = [];
+      const items = JSON.parse(localStorage.getItem("items")) || [];
 
       function addItem(e) {
         e.preventDefault();
@@ -68,6 +67,7 @@
         };
         items.push(item);
         populateList(items, itemsList);
+        localStorage.setItem("items", JSON.stringify(items));
         this.reset();
       }
 
@@ -76,14 +76,30 @@
           .map((plate, i) => {
             return `
           <li>
-            <label for="">${plate.text}</label>
+          <input type="checkbox" data-index=${i} id="item${i}" ${
+              plate.done ? "checked" : ""
+            } />
+            <label for="item${i}">${plate.text}</label>
           </li>
           `;
           })
           .join("");
       }
 
+      function toggleDone(e) {
+        // Event Delegation
+        if (!e.target.matches("input")) return; // skip this unless it's an input
+        const el = e.target;
+        const index = el.dataset.index;
+        items[index].done = !items[index].done;
+        localStorage.setItem("items", JSON.stringify(items));
+        populateList(items, itemsList);
+      }
+
       addItems.addEventListener("submit", addItem);
+      // Event Delegation used below
+      itemsList.addEventListener("click", toggleDone);
+      populateList(items, itemsList);
     </script>
   </body>
 </html>
