--- a/15-Local-Storage/index.html
+++ b/15-Local-Storage/index.html
@@ -50,6 +50,7 @@
       <form class="add-items">
         <input type="text" name="item" placeholder="Item Name" required />
         <input type="submit" value="+ Add Item" />
+        <input type="submit" value="- Delete Item" />
       </form>
     </div>
 
