--- a/23-Speech-Synthesis/index.html
+++ b/23-Speech-Synthesis/index.html
@@ -44,6 +44,7 @@
       function populateVoices() {
         voices = this.getVoices();
         voicesDropdown.innerHTML = voices
+          .filter((voice) => voice.lang.includes("en"))
           .map(
             (voice) =>
               `<option name='${voice.name}'>${voice.name} (${voice.lang})</option`
@@ -63,8 +64,17 @@
         }
       }
 
+      function setOption() {
+        // console.log(this.name, this.value);
+        msg[this.name] = this.value;
+        toggle();
+      }
+
       speechSynthesis.addEventListener("voiceschanged", populateVoices);
       voicesDropdown.addEventListener("change", setVoice);
+      options.forEach((option) => option.addEventListener("change", setOption));
+      speakButton.addEventListener("click", toggle);
+      stopButton.addEventListener("click", () => toggle(false));
     </script>
   </body>
 </html>
