:radio: Speech Synthesis

--- a/23-Speech-Synthesis/index.html
+++ b/23-Speech-Synthesis/index.html
@@ -64,6 +64,7 @@
         }
       }
 
+      // check this.name and this.value to see for yourself
       function setOption() {
         // console.log(this.name, this.value);
         msg[this.name] = this.value;
