--- a/01-JavaScript-Drum-Kit/index.html
+++ b/01-JavaScript-Drum-Kit/index.html
@@ -60,8 +60,10 @@
         const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
         const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
         if (!audio) return; // stops the function from all together
+
         audio.currentTime = 0; // rewind to the start
         audio.play();
+
         // JQuery Syntax
         // key.addClass("playing");
         key.classList.add("playing");
@@ -72,7 +74,7 @@
         this.classList.remove("playing");
       }
       const keys = document.querySelectorAll(".key");
-      keys.forEach(key =>
+      keys.forEach((key) =>
         key.addEventListener("transitionend", removeTransition)
       );
       window.addEventListener("keydown", playSound);
