:rocket: Video Player

--- a/11-Custom-Video-Player/index.html
+++ b/11-Custom-Video-Player/index.html
@@ -9,7 +9,7 @@
     <div class="player">
       <video
         class="player__video viewer"
-        src="https://storage.coverr.co/videos/coverr-not-working-fountain-1579511398060?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTgwMTg3MTc4fQ.C4qZQKF-0GI8CKZbeF8I5mjmBUQgc6GS57IXv5ZWqa4"
+        src="https://www.pexels.com/video/drawing-a-large-heart-figure-on-the-sand-of-a-seashore-3094026/"
       ></video>
 
       <div class="player__controls">
