--- a/28-Video-Speed-Controller/index.html
+++ b/28-Video-Speed-Controller/index.html
@@ -11,7 +11,7 @@
         class="flex"
         width="765"
         height="430"
-        src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4"
+        src="video.mp4"
         loop
         controls
       ></video>
