:rocket: Video Player

--- a/11-Custom-Video-Player/index.html
+++ b/11-Custom-Video-Player/index.html
@@ -7,10 +7,7 @@
   </head>
   <body>
     <div class="player">
-      <video
-        class="player__video viewer"
-        src="https://www.pexels.com/video/drawing-a-large-heart-figure-on-the-sand-of-a-seashore-3094026/"
-      ></video>
+      <video class="player__video viewer" src="video.mp4"></video>
 
       <div class="player__controls">
         <div class="progress">
