--- a/19-Webcam-Fun/index.html
+++ b/19-Webcam-Fun/index.html
@@ -38,6 +38,6 @@
       hidden
     ></audio>
 
-    <script src="src/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
