--- a/15-Local-Storage/index.html
+++ b/15-Local-Storage/index.html
@@ -51,55 +51,91 @@
         <input type="text" name="item" placeholder="Item Name" required />
         <input type="submit" value="+ Add Item" />
       </form>
+      <div class="btn-group">
+        <button class="check-uncheck">Check All</button>
+        <button class="delete">Delete All</button>
+      </div>
     </div>
+
 
     <script>
       const addItems = document.querySelector(".add-items");
-      const itemsList = document.querySelector(".plates");
-      const items = JSON.parse(localStorage.getItem("items")) || [];
+const itemsList = document.querySelector(".plates");
+let items = JSON.parse(localStorage.getItem("items")) || [];
+const deleteBtn = document.querySelector(".delete");
+const checkBtn = document.querySelector(".check-uncheck");
 
-      function addItem(e) {
-        e.preventDefault();
-        const text = this.querySelector("[name=item]").value;
-        const item = {
-          text, // ES6 version
-          done: false
-        };
-        items.push(item);
-        populateList(items, itemsList);
-        localStorage.setItem("items", JSON.stringify(items));
-        this.reset();
-      }
+function addItem(e) {
+  e.preventDefault();
+  const text = this.querySelector("[name = item]").value;
+  const item = {
+    text,
+    done: false
+  };
+  items.push(item);
+  populateList(items, itemsList);
+  localStorage.setItem("items", JSON.stringify(items));
+  this.reset();
+}
 
-      function populateList(plates = [], platesList) {
-        platesList.innerHTML = plates
-          .map((plate, i) => {
-            return `
-          <li>
-          <input type="checkbox" data-index=${i} id="item${i}" ${
-              plate.done ? "checked" : ""
-            } />
-            <label for="item${i}">${plate.text}</label>
-          </li>
-          `;
-          })
-          .join("");
-      }
+function populateList(plates = [], platesList) {
+  platesList.innerHTML = plates
+    .map((plate, i) => {
+      return `
+      <li>
+        <input type="checkbox" data-index=${i} id="item${i}" ${
+        plate.done ? "checked" : ""
+      }/>
+        <label for="item${i}">${plate.text}</label>
+      </li>
+    `;
+    })
+    .join("");
+}
 
-      function toggleDone(e) {
-        // Event Delegation
-        if (!e.target.matches("input")) return; // skip this unless it's an input
-        const el = e.target;
-        const index = el.dataset.index;
-        items[index].done = !items[index].done;
-        localStorage.setItem("items", JSON.stringify(items));
-        populateList(items, itemsList);
-      }
+// event delegation is done here
+// instead of listening to clicks on <li>/itemsList, we're listening it on it's parent ul
+function toggleDone(e) {
+  if (!e.target.matches("input")) return; //skip this if the item we're clicking is not input
+  const el = e.target;
+  const index = el.dataset.index;
+  items[index].done = !items[index].done;
+  localStorage.setItem("items", JSON.stringify(items));
+  populateList(items, itemsList);
+}
 
-      addItems.addEventListener("submit", addItem);
-      // Event Delegation used below
-      itemsList.addEventListener("click", toggleDone);
-      populateList(items, itemsList);
+function deleteAll() {
+  if (window.confirm("Are you sure you want to delete all items?")) {
+    itemsList.innerHTML = `<li>Loading Tapas...</li>`;
+    items = [];
+    localStorage.removeItem("items");
+  }
+}
+
+let isChecked = false;
+function checkOrUncheckAll() {
+  if (!isChecked) {
+    items.map(item => {
+      return (item.done = true);
+    });
+    populateList(items, itemsList);
+    checkBtn.textContent = "Uncheck All";
+  } else {
+    items.map(item => {
+      return (item.done = false);
+    });
+    populateList(items, itemsList);
+    checkBtn.textContent = "Check All";
+  }
+  isChecked = !isChecked;
+}
+
+addItems.addEventListener("submit", addItem);
+itemsList.addEventListener("click", toggleDone);
+deleteBtn.addEventListener("click", deleteAll);
+checkBtn.addEventListener("click", checkOrUncheckAll);
+
+populateList(items, itemsList);
     </script>
   </body>
 </html>
