--- a/27-Click-and-Drag/index.html
+++ b/27-Click-and-Drag/index.html
@@ -34,33 +34,6 @@
       <div class="item item25">25</div>
     </div>
 
-    <script>
-      const slider = document.querySelector(".items");
-      let isDown = false;
-      let scrollLeft;
-      let startX;
-
-      slider.addEventListener("mousedown", e => {
-        isDown = true;
-        slider.classList.add("active");
-        startX = e.pageX - slider.offsetLeft;
-        scrollLeft = slider.scrollLeft;
-      });
-      slider.addEventListener("mouseleave", () => {
-        isDown = false;
-        slider.classList.remove("active");
-      });
-      slider.addEventListener("mouseup", () => {
-        isDown = false;
-        slider.classList.remove("active");
-      });
-      slider.addEventListener("mousemove", e => {
-        if (!isDown) return; // stops the function from running
-        e.preventDefault(); // Prevents browser from running any wierd tasks
-        const x = e.pageX - slider.scrollLeft;
-        const walk = x - startX;
-        slider.scrollLeft = scrollLeft - walk;
-      });
-    </script>
+    <script defer src="index.js"></script>
   </body>
 </html>
