✏ Added Lazy load functionality to cards

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png" />
     <link rel="manifest" href="assets/icons/site.webmanifest" />
+    <script defer src="index.js"></script>
   </head>
   <body>
     <h1 class="heading">JavaScript 30</h1>
@@ -40,7 +41,7 @@
         href="https://akshay2996.github.io/JavaScript-30/01-JavaScript-Drum-Kit/index.html"
       >
         <div class="items">
-          <img src="assets/DrumKit.png" class="card" />
+          <img data-lazy="assets/DrumKit.png" class="card" />
           <div class="project-name">JS Drum Kit</div>
         </div>
       </a>
@@ -50,7 +51,7 @@
         href="https://akshay2996.github.io/JavaScript-30/02-JS-CSS-Clock/index.html"
       >
         <div class="items">
-          <img src="assets/Clock.png" class="card" />
+          <img data-lazy="assets/Clock.png" class="card" />
           <div class="project-name">JS & CSS Clock</div>
         </div>
       </a>
@@ -60,7 +61,7 @@
         href="https://akshay2996.github.io/JavaScript-30/03-CSS-Variables/index.html"
       >
         <div class="items">
-          <img src="assets/CSSVariables.png" class="card" />
+          <img data-lazy="assets/CSSVariables.png" class="card" />
           <div class="project-name">CSS Variables</div>
         </div>
       </a>
@@ -70,7 +71,7 @@
         href="https://akshay2996.github.io/JavaScript-30/05-Flex-Panel-Gallery/index.html"
       >
         <div class="items">
-          <img src="assets/FlexGallery.png" class="card" />
+          <img data-lazy="assets/FlexGallery.png" class="card" />
           <div class="project-name">Flex Panel Gallery</div>
         </div>
       </a>
@@ -80,7 +81,7 @@
         href="https://akshay2996.github.io/JavaScript-30/06-Type-Ahead/index.html"
       >
         <div class="items">
-          <img src="assets/TypeAhead.png" class="card" />
+          <img data-lazy="assets/TypeAhead.png" class="card" />
           <div class="project-name">Type Ahead</div>
         </div>
       </a>
@@ -90,7 +91,7 @@
         href="https://akshay2996.github.io/JavaScript-30/08-Fun-With-Html5-Canvas/index.html"
       >
         <div class="items">
-          <img src="assets/Canvas.png" class="card" />
+          <img data-lazy="assets/Canvas.png" class="card" />
           <div class="project-name">Fun with Canvas</div>
         </div>
       </a>
@@ -100,7 +101,7 @@
         href="https://akshay2996.github.io/JavaScript-30/10-Hold-Shift-And-Checkboxes/index.html"
       >
         <div class="items">
-          <img src="assets/Checkbox.png" class="card" />
+          <img data-lazy="assets/Checkbox.png" class="card" />
           <div class="project-name">Hold Shift & Check Boxes</div>
         </div>
       </a>
@@ -110,7 +111,7 @@
         href="https://akshay2996.github.io/JavaScript-30/11-Custom-Video-Player/index.html"
       >
         <div class="items">
-          <img src="assets/VideoPlayer.png" class="card" />
+          <img data-lazy="assets/VideoPlayer.png" class="card" />
           <div class="project-name">Custom Video Player</div>
         </div>
       </a>
@@ -120,7 +121,7 @@
         href="https://akshay2996.github.io/JavaScript-30/13-Slide-In-On-Scroll/index.html"
       >
         <div class="items">
-          <img src="assets/Scroll.png" class="card" />
+          <img data-lazy="assets/Scroll.png" class="card" />
           <div class="project-name">Slide In On Scroll</div>
         </div>
       </a>
@@ -130,7 +131,7 @@
         href="https://akshay2996.github.io/JavaScript-30/15-Local-Storage/index.html"
       >
         <div class="items">
-          <img src="assets/LocalStorage.png" class="card" />
+          <img data-lazy="assets/LocalStorage.png" class="card" />
           <div class="project-name">LocalStorage</div>
         </div>
       </a>
@@ -140,7 +141,7 @@
         href="https://akshay2996.github.io/JavaScript-30/16-Mouse-Move-Shadow/index.html"
       >
         <div class="items">
-          <img src="assets/MouseShadow.png" class="card" />
+          <img data-lazy="assets/MouseShadow.png" class="card" />
           <div class="project-name">Mouse Move Shadow</div>
         </div>
       </a>
@@ -150,7 +151,7 @@
         href="https://akshay2996.github.io/JavaScript-30/17-Sort-Without-Articles/index.html"
       >
         <div class="items">
-          <img src="assets/Sort.png" class="card" />
+          <img data-lazy="assets/Sort.png" class="card" />
           <div class="project-name">Sort Without Articles</div>
         </div>
       </a>
@@ -160,7 +161,7 @@
         href="https://akshay2996.github.io/JavaScript-30/19-Webcam-Fun/index.html"
       >
         <div class="items">
-          <img src="assets/Webcam.png" class="card" />
+          <img data-lazy="assets/Webcam.png" class="card" />
           <div class="project-name">Webcam Fun</div>
         </div>
       </a>
@@ -170,7 +171,7 @@
         href="https://akshay2996.github.io/JavaScript-30/20-Speech-Detection/index.html"
       >
         <div class="items">
-          <img src="assets/SpeechDetection.png" class="card" />
+          <img data-lazy="assets/SpeechDetection.png" class="card" />
           <div class="project-name">Speech Detection</div>
         </div>
       </a>
@@ -180,7 +181,7 @@
         href="https://akshay2996.github.io/JavaScript-30/21-Geolocation/index.html"
       >
         <div class="items">
-          <img src="assets/Geolocation.png" class="card" />
+          <img data-lazy="assets/Geolocation.png" class="card" />
           <div class="project-name">Geolocation</div>
         </div>
       </a>
@@ -190,7 +191,7 @@
         href="https://akshay2996.github.io/JavaScript-30/22-Follow-Along-Link-Highlighter/index.html"
       >
         <div class="items">
-          <img src="assets/FollowAlong.png" class="card" />
+          <img data-lazy="assets/FollowAlong.png" class="card" />
           <div class="project-name">Follow Along Link Highlight</div>
         </div>
       </a>
@@ -200,7 +201,7 @@
         href="https://akshay2996.github.io/JavaScript-30/23-Speech-Synthesis/index.html"
       >
         <div class="items">
-          <img src="assets/SpeechSynthesis.png" class="card" />
+          <img data-lazy="assets/SpeechSynthesis.png" class="card" />
           <div class="project-name">Speech Synthesis</div>
         </div>
       </a>
@@ -210,7 +211,7 @@
         href="https://akshay2996.github.io/JavaScript-30/24-Sticky-Nav/index.html"
       >
         <div class="items">
-          <img src="assets/StickyNav.png" class="card" />
+          <img data-lazy="assets/StickyNav.png" class="card" />
           <div class="project-name">Sticky Nav</div>
         </div>
       </a>
@@ -220,7 +221,7 @@
         href="https://akshay2996.github.io/JavaScript-30/26-Stripe-Follow-Along-Nav/index.html"
       >
         <div class="items">
-          <img src="assets/Stripe.png" class="card" />
+          <img data-lazy="assets/Stripe.png" class="card" />
           <div class="project-name">Stripe Follow Along Nav</div>
         </div>
       </a>
@@ -230,7 +231,7 @@
         href="https://akshay2996.github.io/JavaScript-30/27-Click-and-Drag/index.html"
       >
         <div class="items">
-          <img src="assets/Click&Drag.png" class="card" />
+          <img data-lazy="assets/Click&Drag.png" class="card" />
           <div class="project-name">Click & Drag</div>
         </div>
       </a>
@@ -240,7 +241,7 @@
         href="https://akshay2996.github.io/JavaScript-30/28-Video-Speed-Controller/index.html"
       >
         <div class="items">
-          <img src="assets/VideoSpeed.png" class="card" />
+          <img data-lazy="assets/VideoSpeed.png" class="card" />
           <div class="project-name">Video Speed Controller</div>
         </div>
       </a>
@@ -250,7 +251,7 @@
         href="https://akshay2996.github.io/JavaScript-30/29-Countdown-Timer/index.html"
       >
         <div class="items">
-          <img src="assets/Countdown.png" class="card" />
+          <img data-lazy="assets/Countdown.png" class="card" />
           <div class="project-name">Countdown Timer</div>
         </div>
       </a>
@@ -260,7 +261,7 @@
         href="https://akshay2996.github.io/JavaScript-30/30-Whack-A-Mole/index.html"
       >
         <div class="items">
-          <img src="assets/Game.png" class="card" />
+          <img data-lazy="assets/Game.png" class="card" />
           <div class="project-name">Whack A Mole</div>
         </div>
       </a>
